# layer-trains

./: CMakeLists.txt  README.md  config_commands.txt  layer_trains_codebase.txt
src/: main.cpp  terrain_data_map.txt
src/path_drawer/: AutoSlopePath.h  AutoSlopePathDrawer.h  MatchSlopePath.h  MatchSlopePathDrawer.h  PathSystem.h  StraightPath.h  StraightPathDrawer.h  TerrainLine.h  TerrainPath.h  TerrainPathDrawer.h
src/rendering/: Camera.h  Window.h
src/scenes/: Scene.h  TerrainScene.h  TitleCardScene.h
src/settings/: ColourData.h  Settings.h  Utility.h
src/shaders/: Shader.h  ShaderData.h  ShaderManager.h
src/shaders/fragment_shaders/: fragmentBasic.fs  fragmentContourMap.fs  fragmentLine.fs  fragmentSimpleColour.fs  fragmentTexture.fs  fragmentUI.fs
src/shaders/geometry_shaders/: geometryLine.gs
src/shaders/vertex_shaders/: vertexBasic.vs  vertexLine.vs  vertexTerrain.vs  vertexUI.vs
src/terrain/: ElevationLineDrawer.h  Heightmap.h  Terrain.h  TerrainData.h  TerrainPainter.h  TerrainPlane.h
src/textures/: Texture.h  TextureData.h
src/ui/: Button.h  ButtonPanel.h  Circle.h  MenuPanel.h  Panel.h  ScreenObject.h  ScreenUI.h  Text.h  TextButton.h  TextPanel.h  ToolbarPanel.h  UIList.h  UIObject.h  UIText.h
src/user_interaction/: InputHandler.h  Interactable.h  InteractableManager.h
src/world_objects/: Cube.h  Line.h  Object.h  Plane.h  Sphere.h  World.h
textures/gradients/: elevation_codes.txt  steepness_codes.txt  water_codes.txt
tutorial_code/: Shader.h  main.cpp
tutorial_code/shaders/: fragmentSineColour.fs  vertexOutputPos.vs
